--- a/video.html
+++ b/video.html
@@ -38,6 +38,16 @@
         <div class="overlay">
             <h2 id="txt" class="textNotif"></h2>
         </div> 
-      
+
+        <audio id="sound1" controls>
+            <source src="sound1.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="sound2" controls>
+            <source src="sound2.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="sound3" controls>
+            <source src="sound3.mp3" type="audio/mpeg">
+        </audio>
     </body>
+
 </html>
