bad DONE button

--- a/video.html
+++ b/video.html
@@ -32,11 +32,11 @@
         <video controls autoplay>
             <source src="video.mp4" type="video/mp4">
             <source src="video.ogg" type="video/ogg">
-          Your browser does not support the video tag.
         </video>  
 
         <div class="overlay">
             <h2 id="txt" class="textNotif"></h2>
+            <h2 id="donePopup" class="textNotif"></h2>
         </div> 
 
         <audio id="sound1" controls>
@@ -48,6 +48,7 @@
         <audio id="sound3" controls>
             <source src="sound3.mp3" type="audio/mpeg">
         </audio>
+
     </body>
 
 </html>
