--- a/endPage.html
+++ b/endPage.html
@@ -21,7 +21,7 @@
                <p> Well done, you finished the experiment! </p>
                <p> Now please, complete the questionnaire to give your feedback: </p>
    
-               <p> <a type="button" class="custombutton" href="https://www.google.com/forms/about/">Here</a></p>
+               <p> <a type="button" class="custombutton" href="https://www.google.com/forms/about/">NEXT</a></p>
 
            </div>
 
