--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div> &nbsp;&nbsp; I agree to the conditions of the experiment. </div>
                 </div>
 
-                <p id="startButton" style="display:none;"> <a type="button" class="custombutton" class="hide" href="video.html">Start!</a></p>
+                <p id="startButton" style="display:none;"> <a type="button" class="custombutton" class="hide" href="video.html">START</a></p>
                                     
         </div>
 
