--- a/video.html
+++ b/video.html
@@ -15,7 +15,7 @@
         
  
         <video controls autoplay>
-            <source src="https://www.youtube.com/embed/Hu4Yvq-g7_Y" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
             <source src="video.ogg" type="video/ogg">
         </video> 
 
