--- a/endPage.html
+++ b/endPage.html
@@ -21,7 +21,7 @@
                <p> Well done, you finished the experiment! </p>
                <p> Now please, complete the questionnaire to give your feedback: </p>
    
-               <p> <a type="button" class="custombutton" href="https://www.google.com/forms/about/">NEXT</a></p>
+               <p> <a type="button" class="custombutton" href="https://docs.google.com/forms/d/e/1FAIpQLSfJ2YousQvi6pctApY5BMU7UhF-bQcwOf4ca_H8J6723bpn6A/viewform?usp=sf_link">NEXT</a></p>
 
            </div>
 
