--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 <p>When you have read everything on this page, click on the button “Agree to the conditions” and click on the “Start” button. </p>
 
                 <p>In the next page, select the group that was given to you. </p>
+
+                // add smth about not 2x speed
                 
                 <div class="sliderWrapper" >
                     <label class="switch">
