--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                 <p>You are here to participate in an experiment in the context of the  <b>Human in the Loop</b> class project from Mosig Master 2.</p>
                
-                <p>You will have to watch a video we selected, while some notifications will appear. You will then have to answer a few questions about your experience. </p>
+                <p>You will have to attentively watch a video we selected. You will then have to answer a few questions about your experience. </p>
 
                 <p>The video is <b>15 minutes</b> and the questionnaire takes about <b>5 minutes</b>. The questionnaire is totally anonymous and no personal data is asked. </p>
 
