--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
 
                 <p>The video is <b>15 minutes</b> and the questionnaire takes about <b>5 minutes</b>. The questionnaire is totally anonymous and no personal data is asked. </p>
 
-                <p>Please try to pay attention to the video as much as possible.  Please, do not pause it! Try to be in an isolated, quiet space. </p>
+                <p>Please try to pay attention to the video as much as possible.  Please, do not pause or speed it! Try to be in an isolated, quiet space. </p>
 
                 <p>When you have read everything on this page, click on the button “Agree to the conditions” and click on the “Start” button. </p>
 
                 <p>In the next page, select the group that was given to you. </p>
-
-                // add smth about not 2x speed
                 
                 <div class="sliderWrapper" >
                     <label class="switch">
