debug : add indication for notif at the begining

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                
                 <p>You will have to watch a video we selected, while some notifications will appear. You will then have to answer a few questions about your experience. </p>
 
+                <p>Please, don't put the fullscreen mode while watching. Don't touch to any video settings.</p>
+
                 <p>The video is <b>15 minutes</b> and the questionnaire takes about <b>5 minutes</b>. The questionnaire is totally anonymous and no personal data is asked. </p>
 
                 <p>Please try to pay attention to the video as much as possible.  Please, do not pause it! Try to be in an isolated, quiet space. </p>
