--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                
                 <p>You will have to attentively watch a video we selected. You will then have to answer a few questions about your experience. </p>
 
-                <p>Please, <b style="color: red;">don't put the fullscreen mode</b> while watching. <b>Don't touch to any video settings</b>.</p>
+                <p>Please, <b style="color: red;">don't put the fullscreen mode</b> while watching. Run the experiment on a computer. <b>Don't touch to any video settings</b>.</p>
 
                 <p>The video is <b>15 minutes</b> and the questionnaire takes about <b>5 minutes</b>. The questionnaire is totally anonymous and no personal data is asked. </p>
 
